--- a/src/modules/accounts/views/emails/forgotPassword.hbs
+++ b/src/modules/accounts/views/emails/forgotPassword.hbs
@@ -1,29 +1,37 @@
-<style>
-  .container {
-    width: 800px;
-    font-family: Arial, Helvetica, sans-serif;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
+<!DOCTYPE html>
+<html lang="pt-br">
 
-  span {
-    margin: 10px;
-  }
-</style>
+<head>
+  <style>
+    .container {
+      width: 800px;
+      font-family: Arial, Helvetica, sans-serif;
+      align-items: center;
+    }
 
-<div class="container">
-  <span>Oi, {{name}}</span>
-  <br />
+    span {
+      margin: 10px 0;
+      display: block;
+    }
+  </style>
+</head>
 
-  <span>Você solicitou alteração de senha.</span>
-  <span>
-    Para realizar a troca, clique no link
-    <a href={{link}}>{{link}}</a>
-  </span>
+<body>
+  <div class="container">
+    <span>Oi, {{name}}</span>
+    <br />
 
-  <span>Caso não tenha sido você quem solicitou a alteração de senha, basta ignorar este e-mail.</span>
-  <strong>Obrigado!</strong>
+    <span>Você solicitou alteração de senha.</span>
+    <span>
+      Para realizar a troca, clique no link
+      <a href={{link}}>{{link}}</a>
+    </span>
 
-  <h3>Equipe | <strong>Rentx</strong></h3>
-</div>
+    <span>Caso não tenha sido você quem solicitou a alteração de senha, basta ignorar este e-mail.</span>
+    <strong>Obrigado!</strong>
+
+    <h3>Equipe | <strong>Rentx</strong></h3>
+  </div>
+</body>
+
+</html>
